--- a/Ataskaita/ataskaita.tex
+++ b/Ataskaita/ataskaita.tex
@@ -83,7 +83,7 @@ ir pasirenkame  „Iškirpti žodžius“ meniu punktą.
 	\includegraphics[scale=0.7]{img/2.png}\\
 	\textbf{Pav. 2}: Pasirenkame meniu punktą\\
 \end{center}
-Suvedus nuotrauko failo pavadinimą, procedūra apdoroja paveiksliuką ir aplanke words sukuria naujus paveiksliukus, kuriuose po vieną žodį.
+Suvedus nuotrauko failo pavadinimą, procedūra apdoroja paveiksliuką ir aplanke \textit{words} sukuria naujus paveiksliukus, kuriuose po vieną žodį.
  
 \begin{figure}[H]
 \centering
@@ -107,7 +107,7 @@ Paskui pasirinkę naujai iškirpto žodžio failą bei meniu punktą „Iškirpt
 	\textbf{Pav. 4}: Pasirenkame raidžių segmentavimą\\
 \end{center}
 
-Kas yra apibrauktą raudonais keturkampiais bus išsaugota letters aplanke. Tai bus medžiaga, kurią bandys atpažinti sekančiame semestre sukurtas neuroninis tinklas.
+Kas yra apibrauktą raudonais keturkampiais bus išsaugota \textit{letters}  aplanke. Tai bus medžiaga, kurią bandys atpažinti sekančiame semestre sukurtas neuroninis tinklas.
 
 \clearpage
 \section*{Išvados}
